# manga-ocr

./: Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
manga_ocr/: __init__.py  dataset.py  features.py  image_loader.py  plots.py
manga_ocr/modeling/: predict.py  train.py
models/: dataset.py  preprocessing.py
notebooks/: eda.ipynb
src/: image_loader.py
src/modeling/: dataset.py
